--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7L4CVYB92"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Q7L4CVYB92');
+    </script>
     <meta name="description" content="Portfólio de Gustavo de Souza Vieira, apresentando habilidades e experiências.">
     <meta name="keywords" content="Portfólio, desenvolvedor web, habilidades, python, html, css, mysql, back-end, front-end, programação, currículo ">
     <meta name="robots" content="index, follow">
