Alterações feitas nos textos sobre meus conhecimentos

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -40,9 +40,11 @@
         <div>
             <ul>
                 <h3>EM PROGRAMAÇÃO:</h3>
-                <li>DESENVOLVIMENTO WEB (HTML E CSS)</li>
+                <li>DESENVOLVIMENTO WEB (FULL STACK)</li>
                 <li>PYTHON (BÁSICO)</li>
-                <li>MYSQL</li>
+                <li>BANCO DE DADOS (MYSQL)</li>
+                <li>PHP (BÁSICO)</li>
+                <li>DESENVOLVIMENTO DE INTELIGÊNCIA ARTIFICIAL</li>
             </ul>
             <ul>
                 <h3>OUTROS CONHECIMENTOS:</h3>
