testando editar de diretorio clonado no pen drive

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -35,7 +35,7 @@
     </section>
     <section >
         <div>
-            <h2>MEUS CONHECIMENTOS</h2>
+            <h2>MEUS testes</h2>
         </div>
         <div>
             <ul>
