--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -21,44 +21,81 @@
     <title> GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
 </head>
 <body>
-<header>
-    <h1 id="title">GUSTAVO VIEIRA</h1>
-    <nav>
-        <a class="link" href="https://www.instagram.com/dev_admetus/">INSTAGRAM</a>
-        <a class="link" href="https://www.linkedin.com/in/gustavo-vieira-196832316/">LINKEDIN</a>
-        <a class="link" href="https://github.com/Azazel-Admetus">GIT HUB</a>
-    </nav>
-</header>
-<main>
-    <section>
-        <img src="eu-site.jpeg" alt="Gustavo de Souza Vieira, foto pessoal para identificação de analisadores.">
-    </section>
-    <section >
-        <div>
-            <h2>MEUS CONHECIMENTOS</h2>
-        </div>
-        <div id="separacao">
-            <ul>
-                <h3>EM PROGRAMAÇÃO:</h3>
-                <li>DESENVOLVIMENTO WEB (FULL STACK)</li>
-                <li>PYTHON (BÁSICO)</li>
-                <li>BANCO DE DADOS (MYSQL)</li>
-                <li>PHP (BÁSICO)</li>
-                <li>DESENVOLVIMENTO DE INTELIGÊNCIA ARTIFICIAL</li>
-            </ul>
-            <ul>
-                <h3>OUTROS CONHECIMENTOS:</h3>
-                <li>JAPONÊS (INTERMEDIÁRIO)</li>
-                <li>ATIVIDADES MIDIÁTICAS</li>
-                <li>ATIVIDADES ADMNISTRATIVAS (ELABORAÇÃO DE DOCUMENTOS)</li>
-            </ul>
-        </div>
-        <div>
-            <a id="pag" href="caelum.html">Meus projetos</a>
-
-        </div>
-    </section>
-</main>
-<footer><p>contato: gustavodsv7184@gmail.com</p></footer>
+    <main>
+        <header>
+            <h1>GUSTAVO VIEIRA</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a>O que faço?</a>
+                    </li>
+                    <li>
+                        <a>Conheça-me</a>
+                    </li>
+                    <li>
+                        <a>Meu portfólio</a>
+                    </li>
+                    <li>
+                        <a>Vamos fazer um projeto?</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h2>Olá, como vai? Me chamo Gustavo de Souza Vieira</h2>
+            <p>
+                Entusiasta de tecnologia, venho desenvolvendo vários projetos, seja em programação, na minha vida escolar ou na minha vida profissional. Penso que essa é a hora de se aquecer antes do verdadeiro jogo começar!
+            </p>
+            <nav>
+                <h3>O que faço?</h3>
+                <p>Conheça as tecnologias que uso</p>
+                <ul>
+                    <li>
+                        <a>HTML</a>
+                    </li>
+                    <li>
+                        <a>CSS</a>
+                    </li>
+                    <li>
+                        <a>JS</a>
+                    </li>
+                    <li>
+                        <a>PHP</a>
+                    </li>
+                    <li>
+                        <a>PYTHON</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section>
+            <h2>Quem seria Gustavo Vieira?</h2>
+            <p></p>
+        </section>
+        <section>
+            <h2>Conheça os projetos que estou desenvolvendo</h2>
+            <div>Projeto Caelum</div>
+            <div>Didaktos</div>
+            <div>EiTOK</div>
+            <div>Ordem da Física</div>
+            <div>Clube de Robótica</div>
+            <div>LyUp - Desenvolvimento de negócios</div>
+        </section>
+        <section>
+            <h2>Gostaria de se juntar a mim na construção de algo?</h2>
+            <p>Minhas especialidades não se limita apenas à tecnologia, atuo também na área administrativa. Podemos desenvolver plataformas (site ou aplicativo) inovadores, podemos criar empresas ou podemos desenvolver projetos sociais ou profissionais. Estou sempre disposto a criar ou desenvolver algo.</p>
+            <h3>Teve interesse? Vamos trabalhar juntos!</h3>
+            <button>Me contate</button>
+        </section>
+        <footer>
+            <label>Mudar de idioma</label>
+            <select>
+                <option>Inglês</option>
+                <option>Espanhol</option>
+                <option>Japonês</option>
+            </select>
+            <section></section>
+        </footer>
+    </main>
 </body>
 </html>
