--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -54,7 +54,7 @@
             </ul>
         </div>
         <div>
-            <a id="pag" href="../sao-valentim-ja/index.html">Meus Projetos</a>
+            <a id="pag" href="sao_valentim.html">Meus Projetos</a>
 
         </div>
     </section>
