adicionei link ao meu email

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -59,6 +59,8 @@
         </div>
     </section>
 </main>
-<footer><p>contato: gustavodsv7184@gmail.com</p></footer>
+<footer>
+    <a href="mailto:gustavodsv7184@gmail.com">Email: gustavodsv7184@gmail.com</a>
+</footer>
 </body>
 </html>
