mudei o estilo do link do email

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -60,7 +60,7 @@
     </section>
 </main>
 <footer>
-    <a href="mailto:gustavodsv7184@gmail.com">Email: gustavodsv7184@gmail.com</a>
+    <a href="mailto:gustavodsv7184@gmail.com" class="link">Email: gustavodsv7184@gmail.com</a>
 </footer>
 </body>
 </html>
