corrigi o link do meu instagram

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -24,7 +24,7 @@
 <header>
     <h1 id="title">GUSTAVO VIEIRA</h1>
     <nav>
-        <a class="link" href="https://www.instagram.com/dev_admetus/">INSTAGRAM</a>
+        <a class="link" href="https://www.instagram.com/azazel_admetus/">INSTAGRAM</a>
         <a class="link" href="https://www.linkedin.com/in/gustavo-vieira-196832316/">LINKEDIN</a>
         <a class="link" href="https://github.com/Azazel-Admetus">GIT HUB</a>
     </nav>
