--- a/index.html
+++ b/index.html
@@ -3,64 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7L4CVYB92"></script>
-    
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-Q7L4CVYB92');
-    </script>
     <meta name="description" content="Portfólio de Gustavo de Souza Vieira, apresentando habilidades e experiências.">
     <meta name="keywords" content="Portfólio, desenvolvedor web, habilidades, python, html, css, mysql, back-end, front-end, programação, currículo ">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Azazel Admetus">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title> GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
 </head>
 <body>
 <header>
     <h1 id="title">GUSTAVO VIEIRA</h1>
     <nav>
-        <a class="link" href="https://www.instagram.com/azazel_admetus/">INSTAGRAM</a>
-        <a class="link" href="https://www.linkedin.com/in/gustavo-vieira-196832316/">LINKEDIN</a>
-        <a class="link" href="https://github.com/Azazel-Admetus">GIT HUB</a>
+        <a href="#home">Início</a>
+        <a href="#about">Sobre mim</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#trabalho">Vamos trabalhar juntos no seu projeto</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#contato">Contate-me </a>
     </nav>
 </header>
 <main>
-    <section>
-        <img src="eu-site.jpeg" alt="Gustavo de Souza Vieira, foto pessoal para identificação de analisadores.">
+    <section id="inicio">
+        <div>
+            <img src="image/Azazel_Admetus.jpeg" alt="Minha foto pessoal">
+        </div>
+        <div>
+            <h1>Tecnologia, Liderança e Propósito — minha tríade de criação</h1>
+            <p>Me chamo Gustavo, sou desenvolvedor e estrategista de projetos educacionais, tecnológicos e sociais. Atuo como voluntário da LyUp, participo do projeto jovem aprendiz da Câmara Municipal da Estância Turística Ouro Preto do Oeste/RO, e lidero projetos educacionais e tecnológicos na escola Joaquim de Lima Avelino.</p>
+        </div>
     </section>
-    <section >
+    <section id="about">
+        <h2>Olá, conheça mais sobre mim abaixo </h2>
+        <p>Sou estudante do 3º ano do ensino médio na Escola Joaquim de Lima Avelino e atuo como jovem aprendiz na Câmara Municipal da Estância Turística de Ouro Preto do Oeste/RO. Ao longo do programa, passei pelas áreas de recepção, Tecnologia da Informação (TI) e atualmente contribuo no setor administrativo. Tenho experiência na criação e desenvolvimento de projetos educacionais, tecnológicos e socias, especialmente no ambiente escolar. Em setembro de 2023, idealizei o <a href="html/projeto_caelum.html" aria-label="Link de redireionamento para a página do projeto caelum">Projeto Caelum</a>, um robô com capacidade de locomoção e interação por meio de inteligência artificial. O objetivo do projeto é unir educação e tecnologia, promovendo o protagonismo estudantil na criação de soluções inovadoras e desafiadoras. O protótipo foi apresentado na 1ª Feira Maker de Ouro Preto do Oeste, conquistando o segundo lugar e uma vaga na 1ª EXPOCITEC — Exposição de Ciência, Inovação e Tecnologia Educacional de Rondônia. Embora o projeto ainda estivesse em fase inicial, a proposta foi amplamente elogiada e continua em desenvolvimento, com previsão de conclusão da primeira versão até o final de 2025.</p>
+        <h3> Além do Caelum, estou envolvido em iniciativas como:</h3>
+        <ul>
+            <li><a href="html/ordem_da_fisica.html" aria-label="Link de redirecionamento para a páginad o projeto ordem da física">A criação de um clube de estudos de Física, com foco na preparação para o ENEM e exames externos;</a></li>
+            <li><a href="html/narrify.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
+            <li><a href="html/engenium.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
+        </ul>
+        <p>Paralelamente, sou voluntário na LyUp Desenvolvimento de Negócios, a primeira empresa de treinamentos corporativos totalmente personalizados de Rondônia. Nela, desenvolvo projetos sociais com foco na capacitação de jovens e sua preparação para o mercado de trabalho.</p>
+        <p>Na área tecnológica, tenho experiência com o desenvolvimento de sites e aplicativos. Dê uma olhada nos meus projetos aqui abaixo</p>
+    </section>
+    <section id="projetos">
+        <a href="#">
+            <div id="card">
+                <img src="#" alt="imagem do projeto">
+                <h2>titulo</h2>
+                <p>descrição</p>
+            </div>
+        </a>
+    </section>
+    <section id="trabalho">
+        <h2>Vamos trabalhar em um novo projeto!</h2>
+        <p>Clique abaixo e fale comigo</p>
+        <a href="https://wa.me/5569992226657">Solicite meus serviços</a>
+    </section>
+    <section id="skills">
+        <h2>Minhas habilidades</h2>
         <div>
-            <h2>MEUS CONHECIMENTOS</h2>
-        </div>
-        <div id="separacao">
-            <ul>
-                <h3>EM PROGRAMAÇÃO:</h3>
-                <li>DESENVOLVIMENTO WEB (FULL STACK)</li>
-                <li>PYTHON (BÁSICO)</li>
-                <li>BANCO DE DADOS (MYSQL)</li>
-                <li>PHP (BÁSICO)</li>
-                <li>DESENVOLVIMENTO DE INTELIGÊNCIA ARTIFICIAL</li>
-            </ul>
-            <ul>
-                <h3>OUTROS CONHECIMENTOS:</h3>
-                <li>JAPONÊS (INTERMEDIÁRIO)</li>
-                <li>ATIVIDADES MIDIÁTICAS</li>
-                <li>ATIVIDADES ADMNISTRATIVAS (ELABORAÇÃO DE DOCUMENTOS)</li>
-            </ul>
-        </div>
-        <div>
-            <a id="pag" href="sao_valentim.html">Meus Projetos</a>
-
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         </div>
     </section>
 </main>
 <footer>
-    <a href="mailto:gustavodsv7184@gmail.com" class="link">Email: gustavodsv7184@gmail.com</a>
+        <section id="contato">
+        <h2>Me encontre nessas redes</h2>
+        <a href="">
+            <img src="" alt="Entre em contato comigo pelo Instagram">
+        </a>
+        <a href="">
+            <img src="" alt="Entre em contato comigo pelo LinkedIn">
+        </a>
+        <a href="">
+            <img src="" alt="Conheça meus repositórios">
+        </a>
+        <a href="">
+            <img src="" alt="Entre em contato comigo pelo Email">
+        </a> 
+    </section>
 </footer>
 </body>
 </html>
