--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Portfólio, desenvolvedor web, habilidades, python, html, css, mysql, back-end, front-end, programação, currículo ">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Azazel Admetus">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title> GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
 </head>
 <body>
