Comecei a estilizar a página. Adicionei cor ao h1, e aos links. Defini estrutura do header pelo display flex

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <header>
     <h1 id="title">GUSTAVO VIEIRA</h1>
     <nav>
-        <a href="#home">Início</a>
-        <a href="#about">Sobre mim</a>
-        <a href="#projetos">Projetos</a>
-        <a href="#trabalho">Vamos trabalhar juntos no seu projeto</a>
-        <a href="#skills">Habilidades</a>
+        <a href="#home">Início</a> <span>|</span>
+        <a href="#about">Sobre mim</a> <span>|</span>
+        <a href="#projetos">Projetos</a> <span>|</span>
+        <a href="#trabalho">Vamos trabalhar juntos no seu projeto</a> <span>|</span>
+        <a href="#skills">Habilidades</a> <span>|</span>
         <a href="#contato">Contate-me </a>
     </nav>
 </header>
