Estilizei as duas primeiras section. Início e about

--- a/index.html
+++ b/index.html
@@ -41,9 +41,16 @@
             <li><a href="html/narrify.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
             <li><a href="html/engenium.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
         </ul>
-        <p>Paralelamente, sou voluntário na LyUp Desenvolvimento de Negócios, a primeira empresa de treinamentos corporativos totalmente personalizados de Rondônia. Nela, desenvolvo projetos sociais com foco na capacitação de jovens e sua preparação para o mercado de trabalho.</p>
-        <p>Na área tecnológica, tenho experiência com o desenvolvimento de sites e aplicativos. Dê uma olhada nos meus projetos aqui abaixo</p>
-    </section>
+        <div id="lyup">
+            <div>
+                <p>Paralelamente, sou voluntário na LyUp Desenvolvimento de Negócios, a primeira empresa de treinamentos corporativos totalmente personalizados de Rondônia. Nela, desenvolvo projetos sociais com foco na capacitação de jovens e sua preparação para o mercado de trabalho.</p>
+                <p>Na área tecnológica, tenho experiência com o desenvolvimento de sites e aplicativos. Dê uma olhada nos meus projetos aqui abaixo</p>
+            </div>
+            <div>
+                <img src="image/7.png" alt="Logo da LyUp - Desenvolvimento de Negócios">
+            </div>
+        </div>
+            </section>
     <section id="projetos">
         <a href="#">
             <div id="card">
