--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                 <p>Na área tecnológica, tenho experiência com o desenvolvimento de sites e aplicativos. Dê uma olhada nos meus projetos aqui abaixo</p>
             </div>
             <div>
-                <img src="image/7.png" alt="Logo da LyUp - Desenvolvimento de Negócios">
+                <img src="image/LyUp-Logo.png" alt="Logo da LyUp - Desenvolvimento de Negócios">
             </div>
         </div>
             </section>
     <section id="projetos">
-        <a href="#">
-            <div id="card">
+        <!-- <a href="#">
+            <div class="card">
                 <img src="#" alt="imagem do projeto">
                 <h2>titulo</h2>
                 <p>descrição</p>
-            </div>
-        </a>
+            </div> 
+        </a> -->
     </section>
     <section id="trabalho">
         <h2>Vamos trabalhar em um novo projeto!</h2>
@@ -93,5 +93,58 @@
         </a> 
     </section>
 </footer>
+<script>
+    const projetos = [
+        {
+            titulo: "Projeto Caelum", 
+            descricao: "Um robô autônomo e interativo desenvolvido por estudantes, a fim de promover a educação tecnológica e o protagonismo estudantil.",
+            imagem:"image/projeto_caelum.jpeg",
+            link: "html/projeto_caelum.html"
+        },
+        {
+            titulo: "Clube de estudos de Física - Ordem da Física", 
+            descricao: "Um clube de estudos dedicado a ajudar estudantes a se prepararem para o ENEM, vestibulares e exames externos. O objetivo é tornar a física acessível e interessante, tornando o momento de estudar em algo muito mais divertido.",
+            imagem: "image/OdF-logo.jpeg",
+            link: "html/ordem_da_fisica.html"
+        }, 
+        {
+            titulo: "Clube do livro - Narrify Versos e Prosa", 
+            descricao: "Um clube do livro dedicado a jovens leitores e entusiastas da literatura. O objetivo é promover uma cultura literária entre os jovens, criando uma comunidade de leitores no âmbito nacional. Nossa missão é promover tanto a literatura nacional como internacional.",
+            imagem: "image/narrify-logo.png",
+            link: "html/narrify.html"     
+        }, 
+        {
+            titulo: "Clube de Robótica - Engenium",
+            descricao: "Um clube de robótica voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação. Levando o preparo de soft skills aos estudantes.",
+            imagem: "image/engenium-logo.jpeg",
+            link: "html/engenium.html"
+        }
+    ];
+    const section = document.getElementById("projetos");
+
+    projetos.forEach(p => {
+        const a = document.createElement("a");
+        a.href = p.link;
+
+        const card = document.createElement("div");
+        card.classList.add("card");
+
+        const img = document.createElement("img");
+        img.src = p.imagem;
+        img.alt = p.titulo;
+
+        const h2 = document.createElement("h2");
+        h2.textContent= p.titulo;
+    
+        const pDesc = document.createElement("p");
+        pDesc.textContent = p.descricao;
+
+        card.appendChild(img);
+        card.appendChild(h2);
+        card.appendChild(pDesc);
+        a.appendChild(card);
+        section.appendChild(a);
+    });
+</script>
 </body>
 </html>
