finalmente terminei a estilização do site. Agora, vou apenas adicionar uma página padrão para as páginas do projeto, e aí eu vou subir para a branch principal

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Azazel Admetus">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <title> GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
 </head>
 <body>
@@ -71,30 +72,53 @@
     </section>
     <section id="skills">
         <h2>Minhas habilidades</h2>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <div id="container">
+            <div id="soft-skills">
+                <ul>
+                    <li>
+                        <h4>Liderança de Projetos</h4>
+                    </li>
+                    <li>
+                        <h4>Capacidade de resolver problemas</h4>
+                    </li> 
+                    <li>
+                        <h4>Criatividade</h4>
+                    </li>
+                    <li>
+                        <h4>Comunicação</h4>
+                    </li>
+                    <li>
+                        <h4>Organização</h4>
+                    </li>
+                </ul>
+            </div>
+            <div id="hard-skills">
+                <i class="devicon-php-plain"></i>
+                <i class="devicon-python-plain"></i>
+                <i class="devicon-kotlin-plain"></i>
+                <i class="devicon-javascript-plain"></i>
+                <i class="devicon-mysql-plain-wordmark"></i>
+            </div>
         </div>
     </section>
 </main>
 <footer>
         <section id="contato">
-        <h2>Me encontre nessas redes</h2>
-        <a href="">
-            <img src="" alt="Entre em contato comigo pelo Instagram">
-        </a>
-        <a href="">
-            <img src="" alt="Entre em contato comigo pelo LinkedIn">
-        </a>
-        <a href="">
-            <img src="" alt="Conheça meus repositórios">
-        </a>
-        <a href="">
-            <img src="" alt="Entre em contato comigo pelo Email">
-        </a> 
+        <h2>Me encontre nestas redes</h2>
+        <div id="container-contacts">
+            <a href="https://www.instagram.com/dev_admetus?igsh=MTl2emlkd210bHA5Ng==">
+                <img src="image/instagram.svg" alt="Entre em contato comigo pelo Instagram">
+            </a>
+            <a href="www.linkedin.com/in/gustavo-vieira-azazeladmetus">
+                <img src="image/linkedin.png" alt="Entre em contato comigo pelo LinkedIn">
+            </a>
+            <a href="https://github.com/Azazel-Admetus?tab=repositories">
+                <img src="image/github.svg" alt="Conheça meus repositórios">
+            </a>
+            <a href="mailto:gustavodsv7184@gmail.com">
+                <img src="image/gmail.svg" alt="Entre em contato comigo pelo Email">
+            </a> 
+        </div>
     </section>
 </footer>
 <script>
