--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </section>
     <section id="about">
         <h2>Olá, conheça mais sobre mim abaixo </h2>
-        <p>Sou estudante do 3º ano do ensino médio na Escola Joaquim de Lima Avelino e atuo como jovem aprendiz na Câmara Municipal da Estância Turística de Ouro Preto do Oeste/RO. Ao longo do programa, passei pelas áreas de recepção, Tecnologia da Informação (TI) e atualmente contribuo no setor administrativo. Tenho experiência na criação e desenvolvimento de projetos educacionais, tecnológicos e socias, especialmente no ambiente escolar. Em setembro de 2023, idealizei o <a href="html/projeto_caelum.html" aria-label="Link de redireionamento para a página do projeto caelum">Projeto Caelum</a>, um robô com capacidade de locomoção e interação por meio de inteligência artificial. O objetivo do projeto é unir educação e tecnologia, promovendo o protagonismo estudantil na criação de soluções inovadoras e desafiadoras. O protótipo foi apresentado na 1ª Feira Maker de Ouro Preto do Oeste, conquistando o segundo lugar e uma vaga na 1ª EXPOCITEC — Exposição de Ciência, Inovação e Tecnologia Educacional de Rondônia. Embora o projeto ainda estivesse em fase inicial, a proposta foi amplamente elogiada e continua em desenvolvimento, com previsão de conclusão da primeira versão até o final de 2025.</p>
+        <p>Sou estudante do 3º ano do ensino médio na Escola Joaquim de Lima Avelino e atuo como jovem aprendiz na Câmara Municipal da Estância Turística de Ouro Preto do Oeste/RO. Ao longo do programa, passei pelas áreas de recepção, Tecnologia da Informação (TI) e atualmente contribuo no setor administrativo. Tenho experiência na criação e desenvolvimento de projetos educacionais, tecnológicos e socias, especialmente no ambiente escolar. Em setembro de 2023, idealizei o <a href="html/padrao.html" aria-label="Link de redireionamento para a página do projeto caelum">Projeto Caelum</a>, um robô com capacidade de locomoção e interação por meio de inteligência artificial. O objetivo do projeto é unir educação e tecnologia, promovendo o protagonismo estudantil na criação de soluções inovadoras e desafiadoras. O protótipo foi apresentado na 1ª Feira Maker de Ouro Preto do Oeste, conquistando o segundo lugar e uma vaga na 1ª EXPOCITEC — Exposição de Ciência, Inovação e Tecnologia Educacional de Rondônia. Embora o projeto ainda estivesse em fase inicial, a proposta foi amplamente elogiada e continua em desenvolvimento, com previsão de conclusão da primeira versão até o final de 2025.</p>
         <h3> Além do Caelum, estou envolvido em iniciativas como:</h3>
         <ul>
-            <li><a href="html/ordem_da_fisica.html" aria-label="Link de redirecionamento para a páginad o projeto ordem da física">A criação de um clube de estudos de Física, com foco na preparação para o ENEM e exames externos;</a></li>
-            <li><a href="html/narrify.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
-            <li><a href="html/engenium.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
+            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto ordem da física">A criação de um clube de estudos de Física, com foco na preparação para o ENEM e exames externos;</a></li>
+            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
+            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
         </ul>
         <div id="lyup">
             <div>
@@ -127,25 +127,29 @@
             titulo: "Projeto Caelum", 
             descricao: "Um robô autônomo e interativo desenvolvido por estudantes, a fim de promover a educação tecnológica e o protagonismo estudantil.",
             imagem:"image/projeto_caelum.jpeg",
-            link: "html/projeto_caelum.html"
+            // link: "html/projeto_caelum.html"
+            link:"html/padrao.html"
         },
         {
             titulo: "Clube de estudos de Física - Ordem da Física", 
             descricao: "Um clube de estudos dedicado a ajudar estudantes a se prepararem para o ENEM, vestibulares e exames externos. O objetivo é tornar a física acessível e interessante, tornando o momento de estudar em algo muito mais divertido.",
             imagem: "image/OdF-logo.jpeg",
-            link: "html/ordem_da_fisica.html"
+            // link: "html/ordem_da_fisica.html"
+            link:"html/padrao.html"
         }, 
         {
             titulo: "Clube do livro - Narrify Versos e Prosa", 
             descricao: "Um clube do livro dedicado a jovens leitores e entusiastas da literatura. O objetivo é promover uma cultura literária entre os jovens, criando uma comunidade de leitores no âmbito nacional. Nossa missão é promover tanto a literatura nacional como internacional.",
             imagem: "image/narrify-logo.png",
-            link: "html/narrify.html"     
+            // link: "html/narrify.html"   
+            link:"html/padrao.html"  
         }, 
         {
             titulo: "Clube de Robótica - Engenium",
             descricao: "Um clube de robótica voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação. Levando o preparo de soft skills aos estudantes.",
             imagem: "image/engenium-logo.jpeg",
-            link: "html/engenium.html"
+            // link: "html/engenium.html"
+            link:"html/padrao.html"
         }
     ];
     const section = document.getElementById('projetos');
