coloquei um link para a página

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
             <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto ordem da física">A criação de um clube de estudos de Física, com foco na preparação para o ENEM e exames externos;</a></li>
             <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
-            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
+            <li><a href="html/SolumChat.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
         </ul>
         <div id="lyup">
             <div>
