trabalhei um pouco na responsividade da página index. Falta alguns ajustes ainda

--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Gustavo de Souza Vieira, apresentando habilidades e experiências.">
-    <meta name="keywords" content="Portfólio, desenvolvedor web, habilidades, python, html, css, mysql, back-end, front-end, programação, currículo ">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Azazel Admetus">
+    <meta name="keywords" content="Portfólio, desenvolvedor web, habilidades, python, html, css, mysql, back-end, front-end, programação, currículo">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <title> GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <title>GUSTAVO DE SOUZA VIEIRA | PORTFÓLIO</title>
 </head>
 <body>
 <header>
     <h1 id="title">GUSTAVO VIEIRA</h1>
     <nav>
-        <a href="#home">Início</a> <span>|</span>
-        <a href="#about">Sobre mim</a> <span>|</span>
-        <a href="#projetos">Projetos</a> <span>|</span>
-        <a href="#trabalho">Vamos trabalhar juntos no seu projeto</a> <span>|</span>
-        <a href="#skills">Habilidades</a> <span>|</span>
-        <a href="#contato">Contate-me </a>
+        <a href="#home">Início</a>
+        <a href="#about">Sobre mim</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#trabalho">Vamos trabalhar juntos</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#contato">Contate-me</a>
     </nav>
 </header>
+
 <main>
+    <section id="solumchat-destaque">
+        <div class="container-chat">
+            <h1>SolumChat</h1>
+            <p>Tire suas dúvidas sobre física com nosso assistente interativo! Explore conceitos, curiosidades e aprenda com físicos clássicos e modernos.</p>
+            <a href="html/solumchat.html" class="botao-acessar">Acessar o SolumChat</a>
+        </div>
+    </section>
+
     <section id="inicio">
         <div>
             <img src="image/Azazel_Admetus.jpeg" alt="Minha foto pessoal">
@@ -33,63 +40,49 @@
             <p>Me chamo Gustavo, sou desenvolvedor e estrategista de projetos educacionais, tecnológicos e sociais. Atuo como voluntário da LyUp, participo do projeto jovem aprendiz da Câmara Municipal da Estância Turística Ouro Preto do Oeste/RO, e lidero projetos educacionais e tecnológicos na escola Joaquim de Lima Avelino.</p>
         </div>
     </section>
+
     <section id="about">
-        <h2>Olá, conheça mais sobre mim abaixo </h2>
-        <p>Sou estudante do 3º ano do ensino médio na Escola Joaquim de Lima Avelino e atuo como jovem aprendiz na Câmara Municipal da Estância Turística de Ouro Preto do Oeste/RO. Ao longo do programa, passei pelas áreas de recepção, Tecnologia da Informação (TI) e atualmente contribuo no setor administrativo. Tenho experiência na criação e desenvolvimento de projetos educacionais, tecnológicos e socias, especialmente no ambiente escolar. Em setembro de 2023, idealizei o <a href="html/padrao.html" aria-label="Link de redireionamento para a página do projeto caelum">Projeto Caelum</a>, um robô com capacidade de locomoção e interação por meio de inteligência artificial. O objetivo do projeto é unir educação e tecnologia, promovendo o protagonismo estudantil na criação de soluções inovadoras e desafiadoras. O protótipo foi apresentado na 1ª Feira Maker de Ouro Preto do Oeste, conquistando o segundo lugar e uma vaga na 1ª EXPOCITEC — Exposição de Ciência, Inovação e Tecnologia Educacional de Rondônia. Embora o projeto ainda estivesse em fase inicial, a proposta foi amplamente elogiada e continua em desenvolvimento, com previsão de conclusão da primeira versão até o final de 2025.</p>
-        <h3> Além do Caelum, estou envolvido em iniciativas como:</h3>
+        <h2>Olá, conheça mais sobre mim</h2>
+        <p>Sou estudante do 3º ano do ensino médio na Escola Joaquim de Lima Avelino e atuo como jovem aprendiz na Câmara Municipal da Estância Turística de Ouro Preto do Oeste/RO. Ao longo do programa, passei pelas áreas de recepção, TI e atualmente contribuo no setor administrativo. Tenho experiência na criação e desenvolvimento de projetos educacionais, tecnológicos e sociais, especialmente no ambiente escolar. Em setembro de 2023, idealizei o <a href="html/padrao.html">Projeto Caelum</a>, um robô com capacidade de locomoção e interação por IA, apresentado em feiras de ciência e tecnologia.</p>
+        
+        <h3>Além do Caelum, estou envolvido em iniciativas como:</h3>
         <ul>
-            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto ordem da física">A criação de um clube de estudos de Física, com foco na preparação para o ENEM e exames externos;</a></li>
-            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto Narrify - Versos e Prosa">A reestruturação do clube do livro, com o objetivo de formar uma comunidade literária jovem e nacional;</a></li>
-            <li><a href="html/padrao.html" aria-label="Link de redirecionamento para a página do projeto do clube de robótica">A fundação do clube de robótica, voltado ao desenvolvimento de projetos criativos e complexos, estimulando raciocínio lógico, resolução de problemas e inovação.</a> </li>
+            <li><a href="html/padrao.html">Clube de estudos de Física - Ordem da Física</a></li>
+            <li><a href="html/padrao.html">Clube do livro - Narrify Versos e Prosa</a></li>
+            <li><a href="html/padrao.html">Clube de Robótica - Engenium</a></li>
         </ul>
+
         <div id="lyup">
             <div>
-                <p>Paralelamente, sou voluntário na LyUp Desenvolvimento de Negócios, a primeira empresa de treinamentos corporativos totalmente personalizados de Rondônia. Nela, desenvolvo projetos sociais com foco na capacitação de jovens e sua preparação para o mercado de trabalho.</p>
-                <p>Na área tecnológica, tenho experiência com o desenvolvimento de sites e aplicativos. Dê uma olhada nos meus projetos aqui abaixo</p>
+                <p>Sou voluntário na LyUp Desenvolvimento de Negócios, primeira empresa de treinamentos corporativos totalmente personalizados de Rondônia. Nela, desenvolvo projetos sociais e tecnológicos.</p>
             </div>
             <div>
-                <img src="image/LyUp-Logo.png" alt="Logo da LyUp - Desenvolvimento de Negócios">
+                <img src="image/LyUp-Logo.png" alt="Logo da LyUp">
             </div>
         </div>
-            </section>
-    <section id="projetos">
-        <div class="projetos-flex">
-            <h2 class="titulo-projetos">Meus Projetos</h2>
-            <div class="cards-container"></div>
-        </div>
-        <!-- <a href="#">
-            <div class="card">
-                <img src="#" alt="imagem do projeto">
-                <h2>titulo</h2>
-                <p>descrição</p>
-            </div> 
-        </a> -->
     </section>
+
+    <section id="projetos">
+        <h2 class="titulo-projetos">Meus Projetos</h2>
+        <div class="cards-container"></div>
+    </section>
+
     <section id="trabalho">
         <h2>Vamos trabalhar em um novo projeto!</h2>
         <p>Clique abaixo e fale comigo</p>
         <a href="https://wa.me/5569992226657">Solicite meus serviços</a>
     </section>
+
     <section id="skills">
         <h2>Minhas habilidades</h2>
         <div id="container">
             <div id="soft-skills">
                 <ul>
-                    <li>
-                        <h4>Liderança de Projetos</h4>
-                    </li>
-                    <li>
-                        <h4>Capacidade de resolver problemas</h4>
-                    </li> 
-                    <li>
-                        <h4>Criatividade</h4>
-                    </li>
-                    <li>
-                        <h4>Comunicação</h4>
-                    </li>
-                    <li>
-                        <h4>Organização</h4>
-                    </li>
+                    <li>Liderança de Projetos</li>
+                    <li>Capacidade de resolver problemas</li>
+                    <li>Criatividade</li>
+                    <li>Comunicação</li>
+                    <li>Organização</li>
                 </ul>
             </div>
             <div id="hard-skills">
@@ -102,22 +95,15 @@
         </div>
     </section>
 </main>
+
 <footer>
-        <section id="contato">
+    <section id="contato">
         <h2>Me encontre nestas redes</h2>
         <div id="container-contacts">
-            <a href="https://www.instagram.com/dev_admetus?igsh=MTl2emlkd210bHA5Ng==">
-                <img src="image/instagram.svg" alt="Entre em contato comigo pelo Instagram">
-            </a>
-            <a href="www.linkedin.com/in/gustavo-vieira-azazeladmetus">
-                <img src="image/linkedin.png" alt="Entre em contato comigo pelo LinkedIn">
-            </a>
-            <a href="https://github.com/Azazel-Admetus?tab=repositories">
-                <img src="image/github.svg" alt="Conheça meus repositórios">
-            </a>
-            <a href="mailto:gustavodsv7184@gmail.com">
-                <img src="image/gmail.svg" alt="Entre em contato comigo pelo Email">
-            </a> 
+            <a href="https://www.instagram.com/dev_admetus"><img src="image/instagram.svg" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/gustavo-vieira-azazeladmetus"><img src="image/linkedin.png" alt="LinkedIn"></a>
+            <a href="https://github.com/Azazel-Admetus"><img src="image/github.svg" alt="GitHub"></a>
+            <a href="mailto:gustavodsv7184@gmail.com"><img src="image/gmail.svg" alt="Email"></a>
         </div>
     </section>
 </footer>
