ajustei o nome do link para o SolumChat

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container-chat">
             <h1>SolumChat</h1>
             <p>Tire suas dúvidas sobre física com nosso assistente interativo! Explore conceitos, curiosidades e aprenda com físicos clássicos e modernos.</p>
-            <a href="html/solumchat.html" class="botao-acessar">Acessar o SolumChat</a>
+            <a href="html/SolumChat.html" class="botao-acessar">Acessar o SolumChat</a>
         </div>
     </section>
 
