Corrigi na parte onde ele pega os arquivos json. Antes ele não pegava o arquivo caelum.json

--- a/html/SolumChat.html
+++ b/html/SolumChat.html
@@ -35,7 +35,7 @@
         let fuse;
 
         // Carrega todos os arquivos JSON de temas
-        const temas = ["mecanica", "termologia", "ondulatoria", "optica", "eletromagnetismo", "biografia"];
+        const temas = ["mecanica", "termologia", "ondulatoria", "optica", "eletromagnetismo", "biografia", "caelum"];
 
         async function carregarTodosOsTemas() {
             for (const tema of temas) {
