Mudei a imagem da aba

--- a/html/SolumChat.html
+++ b/html/SolumChat.html
@@ -6,7 +6,7 @@
     <meta name="description" content="SolumChat é seu assistente virtual educativo de Física Clássica. Pergunte sobre Mecânica, Termologia, Óptica, Ondulatória, Eletromagnetismo e mais!">
     <meta name="keywords" content="Física, Mecânica, Termologia, Óptica, Eletromagnetismo, Chat, SolumChat, Aprender Física">
     <meta name="author" content="Azazel Admetus">
-    <link rel="icon" href="../image/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../image/logo-aba.png" type="image/png">
     <link rel="stylesheet" href="../css/SolumChat.css">
     <title>SolumChat - Tire suas dúvidas sobre Física Clássica</title>
 </head>
