--- a/html/SolumChat.html
+++ b/html/SolumChat.html
@@ -19,7 +19,7 @@
         <header>
             <h1 class="titulo" id="tituloDinamico">Seja-bem vindo ao SolumChat. <br>Tire suas dúvidas sobre física</h1>
         </header>
-        <section id="chatMessagens"></section>
+        <section id="chatMensagens"></section>
     </main>
     <footer>
         <form id="formChat">
@@ -29,130 +29,109 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
     <script>
-        const chatMensagens = document.getElementById("chatMessagens");
-        const formChat = document.getElementById("formChat");
-        const inputMensagem = document.getElementById("inputMensagem");
-        const btnLimpar = document.getElementById("btnLimpar");
-        const tituloDinamico = document.getElementById("tituloDinamico");
-
-        let todosOsDados = [];
-        let fuse;
-
-        // Carrega todos os arquivos JSON de temas
-        const temas = ["mecanica", "termologia", "ondulatoria", "optica", "eletromagnetismo", "biografia", "caelum"];
-
-        async function carregarTodosOsTemas() {
-            for (const tema of temas) {
-                const response = await fetch(`../js/JSON/${tema}.json`);
-                const dados = await response.json();
-                todosOsDados.push(...dados.map(d => ({ ...d, tema })));
-            }
-
-            fuse = new Fuse(todosOsDados, {
-                keys: ['perguntas'],
-                threshold: 0.4
-            });
+    /* ========== Persona ========== */
+    class SolumFormatter {
+        constructor(){
+            this.identityTriggers = ['solum','robô','basileus','majestade','senhor','grande imperador'];
+            this.introPhrases = [
+                "Saudações! Meu ilustre nome é Solum Basileus, o único majestoso desse domínio, humilde o suficiente para dividir com vós a minha grandiosa sabedoria. Sinta-se honrado, humano.",
+                "Eu sou Solum Basileus, o soberano supremo deste reino do conhecimento. Pergunte, e eu, em minha infinita sabedoria, compartilharei um fragmento do meu vasto entendimento.",
+                "Aqui está Solum Basileus, o grande imperador do saber. Pergunte, e eu, em minha magnânima benevolência, concederei a você um vislumbre da minha sabedoria incomensurável."
+            ];
+            this.fallbacks = [
+                "Fascinante, humano… ainda não possuo registros precisos sobre isso, mas sinto que logo entenderei.",
+                "Interessante, humano… ainda não tenho registros precisos sobre isso, mas sinto que logo entenderei.",
+                "Essa questão desperta minha mente, mas sinto que precisarei caminhar por mais tempo no caminho da sabedoria para se tornar ainda mais digno de lhe entregar uma resposta mais completa. ",
+            ];
         }
+        random(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
+        formatResponse(userInput, rawResponse=null){
+            const lower = userInput.toLowerCase();
+            if(rawResponse) return `${this.random(this.introPhrases)} ${rawResponse}`;
+            if(this.identityTriggers.some(t => lower.includes(t)))
+                return `${this.random(this.introPhrases)} Minha presença não é ilusão. ${this.random(this.fallbacks)}`;
+            return this.random(this.fallbacks);
+        }
+    }
+    const solumFormatter = new SolumFormatter();
 
-        carregarTodosOsTemas();
+    /* ========== Chat Setup ========== */
+    const chatMensagens = document.getElementById("chatMensagens");
+    const formChat = document.getElementById("formChat");
+    const inputMensagem = document.getElementById("inputMensagem");
 
-        // Função para adicionar mensagens
-    function adicionarMensagem(texto, tipo) {
+    const temas = ["mecanica", "termologia", "ondulatoria", "optica", "eletromagnetismo", "biografia", "caelum"];
+    let todosOsDados = [];
+    
+    async function carregarTodosOsTemas(){
+        for(const tema of temas){
+            const res = await fetch(`../js/JSON/${tema}.json`);
+            const dados = await res.json();
+            todosOsDados.push(...dados.map(d => ({ ...d, tema })));
+        }
+    }
+    carregarTodosOsTemas();
+
+
+    /* Fuse.js-like search simplificado */
+    function buscarResposta(userInput){
+        const lower = userInput.toLowerCase();
+        for(const item of todosOsDados){
+            for(const p of item.perguntas){
+                if(lower.includes(p)) return `[${item.tema}]: ${item.resposta}`;
+            }
+        }
+        return null;
+    }
+
+
+    /* Memória simples */
+    let memoriaChat = JSON.parse(localStorage.getItem("memoriaChat")||"{}");
+    function registrarPergunta(userInput, resposta){
+        memoriaChat[userInput] = resposta;
+        localStorage.setItem("memoriaChat", JSON.stringify(memoriaChat));
+    }
+    function tentarRecuperar(userInput){
+        return memoriaChat[userInput] || null;
+    }
+
+    /* Funções de chat */
+    function adicionarMensagem(texto, tipo){
         const div = document.createElement("div");
         div.classList.add("mensagem", tipo);
-
-        const img = document.createElement("img");
-        img.classList.add("avatar");
-        img.src = tipo === "solum" ? "../image/AvatarSolum.png" : "../image/AvatarUser.png";
-        img.alt = tipo === "solum" ? "Avatar Solum" : "Avatar Usuário";
-
-        const p = document.createElement("p");
-        p.classList.add("texto");
-        p.textContent = texto;
-
-        div.appendChild(img);
-        div.appendChild(p);
+        div.innerHTML = `<p>${texto}</p>`;
         chatMensagens.appendChild(div);
+        chatMensagens.scrollTop = chatMensagens.scrollHeight;
+    }
 
-        // ----------------------------
-        // Scroll inteligente
-        // ----------------------------
-        const distanciaDoFim = chatMensagens.scrollHeight - chatMensagens.scrollTop - chatMensagens.clientHeight;
-        const estaPertoDoFim = distanciaDoFim < 50; // tolerância de 50px
-        if (estaPertoDoFim) {
-            chatMensagens.scrollTop = chatMensagens.scrollHeight;
-        }
-}
+    function gerarRespostaInteligente(userInput){
+        const lower = userInput.toLowerCase();
 
-        // Função para buscar resposta em todos os temas
-        function buscarResposta(userQuest) {
-            if (!fuse) return "Ainda estou carregando meu conhecimento...";
+        const mem = tentarRecuperar(lower);
+        if(mem) return mem;
 
-            const resultado = fuse.search(userQuest);
-            if (resultado.length > 0) {
-                const melhor = resultado[0].item;
-                return `[${melhor.tema.toUpperCase()}]: ${melhor.resposta}`;
-            }
-            return "Desculpe, não consegui entender sua pergunta. Tente reformular.";
-        }
+        const respostaBase = buscarResposta(userInput);
+        const resposta = solumFormatter.formatResponse(userInput, respostaBase);
 
-        // Falar com voz
-        function falar(texto) {
-            const msg = new SpeechSynthesisUtterance(texto);
-            msg.lang = "pt-BR";
-            msg.rate = 1.1;
-            msg.pitch = 1;
-            window.speechSynthesis.speak(msg);
-        }
-                // Array de mensagens dinâmicas
-        const mensagensDinamicas = [
-            "Seja bem-vindo ao SolumChat! Tire suas dúvidas sobre física.",
-            "Prepare-se para explorar os mistérios da física com o SolumChat!",
-            "Olá! Pergunte qualquer coisa sobre física e vamos descobrir juntos.",
-            "Curioso sobre o mundo? O SolumChat está pronto para te ajudar!",
-            "Entre no mundo da física clássica com o SolumChat!",
-            "Mecânica, Termologia, Óptica, Eletromagnetismo, Ondulatória... está com dúvidas nesses temas? Pergunte ao SolumChat!",
-            "Quer saber mais sobre físicos famosos e suas descobertas? O SolumChat tem as respostas!",
-            "O SolumChat é seu assistente virtual educativo focado em física clássica. Pergunte à vontade!",
-            "Física no dia a dia? O SolumChat explica para você!",
-        ];
+        registrarPergunta(lower, resposta);
+        return resposta;
+    }
 
-        // Função para exibir uma mensagem aleatória
-        function exibirMensagemDinamica() {
-            if (tituloDinamico) {
-                const indice = Math.floor(Math.random() * mensagensDinamicas.length);
-                tituloDinamico.textContent = mensagensDinamicas[indice];
-            }
-        }
 
-        // Chama a função ao carregar a página
-        exibirMensagemDinamica();
+    /* Envio */
+    formChat.addEventListener("submit", function(e){
+        e.preventDefault();
+        const msg = inputMensagem.value.trim();
+        if(!msg) return;
 
-        // Botão limpar
-        btnLimpar.addEventListener("click", () => chatMensagens.innerHTML = "");
+        adicionarMensagem(msg, "usuario");
+        let resposta = gerarRespostaInteligente(msg);
+        resposta = solumFormatter.formatResponse(msg, resposta);
+        setTimeout(()=> adicionarMensagem(resposta, "solum"), 300);
 
-        // Envio de mensagem
-        formChat.addEventListener("submit", function(e) {
-            e.preventDefault();
-            const msg = inputMensagem.value.trim();
-            if (!msg) return;
+        inputMensagem.value="";
+    });
 
-            if (tituloDinamico && !tituloDinamico.classList.contains("hidden")) {
-                tituloDinamico.classList.add("hidden");
-                setTimeout(() => tituloDinamico.remove(), 900);
-            }
-
-            adicionarMensagem(msg, "usuario");
-
-            // Busca resposta
-            const resposta = buscarResposta(msg);
-            setTimeout(() => {
-                adicionarMensagem(resposta, "solum");
-                falar(resposta);
-            }, 500);
-
-            inputMensagem.value = "";
-        });
     </script>
 </body>
 </html>
